# ry-app-boostrap

./: README.md  pyproject.toml
src/ry_app_bootstrap/: __init__.py  logging.py  types.py  version.py
test/: basic_test.py  smoke_test.py
