[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ry-app-bootstrap"
version = "0.1.1"
description = "Reusable runtime bootstrap helpers for Ross Python services"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Ross Yeager" }]
dependencies = [
  "ry-pg-utils",
  "ryutils",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ry_app_bootstrap" = ["py.typed"]
